# pokescreader-database

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
pokescreader/: database.py
